<resources>
    <string name="app_name">My Weather App</string>
    <string name="title">Type the city and find out the weather!</string>
    <string name="api_key">26dcbaa2166e40cba6b94a096b6af992</string>
    <string name="city_for_search">Type city name…</string>
    <string name="search">search</string>

    <string name="city_name">City name:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="temp">Temp:</string>
    <string name="min_temp">Min temp:</string>
    <string name="max_temp">Max temp:</string>
    <string name="humidity">Humidity:</string>
    <string name="feels_like">Feels like:</string>
    <string name="pressure">Pressure:</string>
    <string name="data">Data</string>

    <string name="btn">Back</string>
</resources>